src/objects/External_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Payments</relationshipLabel>
        <relationshipName>External_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Sub Account Number</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>The name of the bank where the ACH payment account is held.</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>External Payments</relationshipLabel>
        <relationshipName>External_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name__c</fullName>
        <description>The first name of the person who is to be billed for credit card failure.</description>
        <label>Billing Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Last_Name__c</fullName>
        <description>The last name of the person who is to be billed for the credit card failure.</description>
        <label>Billing Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_email__c</fullName>
        <description>The work email address of the person who is to be billed for the subscription.</description>
        <label>Billing Contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bounced_Cheque__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bounced Cheque</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <description>Cancelled Date</description>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <description>The full name (first or personal and last or family) of the holder of the credit or debit card.</description>
        <label>Card Holder Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <description>The type of credit or debit card that is being billed.</description>
        <label>Card Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message returned if the payment was not processed successfully.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The expiration date of the credit card.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>External Payments</relationshipLabel>
        <relationshipName>External_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PDF Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Transaction_ID__c</fullName>
        <label>Parent Transaction ID</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPal_BAID__c</fullName>
        <label>PayPal BAID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPal_Email__c</fullName>
        <label>PayPal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pay_Pal_Profile_Status__c</fullName>
        <label>Pay Pal Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>The date that the creator of the payment wants to declare that the payment is made.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>The display name of the payment method used for the payment.</description>
        <inlineHelpText>The display name of the payment method used for the payment.</inlineHelpText>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Profile_Status__c</fullName>
        <label>Payment Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_amount__c</fullName>
        <description>The amount of the payment.</description>
        <label>Payment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>REF {00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sold_To_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sold To Contact Name</description>
        <label>Sold To Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Payments (Sold To Contact Name)</relationshipLabel>
        <relationshipName>External_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF(ISPICKVAL(Pay_Pal_Profile_Status__c , &quot;Cancelled&quot;), Transaction_Amount__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>External Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Account_Number__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Invoice__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RequiredTransactionType</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Transaction_Type__c))</errorConditionFormula>
        <errorDisplayField>Transaction_Type__c</errorDisplayField>
        <errorMessage>Transaction Type is required.</errorMessage>
    </validationRules>
</CustomObject>